# gpu-dashboard

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROMOTE.md  README.fr.md  README.md  docker-compose.yml  install.sh  pyproject.toml
docs/: COMPETITORS.md  FRONTEND_MIGRATION.md  PLAN.md  bundle-size.md  fdinfo-shared-cache.md  hardening-log.md  healthz-watchdog.md  verdicts.md
frontend/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
profiles/: SCHEMA.fr.md  SCHEMA.md  _generic.json  rtx-3090-ti.json  rtx-3090.json  rtx-4090.json  rtx-5090.json  schema.json
scripts/: build-integrations-taxonomy.py  get.sh  install-coolbits-xorg.sh  install-link-stable-wrapper.sh  install-oculink-watchdog.sh  install-pcie-recovery-wrapper.sh  install-power-limit-wrapper.sh  install-witness-dpkg-hook.sh  test-update-flow.sh
tests/: test_abi_compat_audit.py  test_accounting.py  test_acpi_audit.py  test_acpi_boot_assets_audit.py  test_acpi_tables_inventory_audit.py  test_airgap.py  test_alertmanager_rules.py  test_alsa_cards_audit.py  test_alsa_codec_deep_audit.py  test_api_about.py  test_api_alerts_latest.py  test_api_app_triggers.py  test_api_benchmark.py  test_api_electricity.py  test_api_electricity_config.py  test_api_export_year.py  test_api_gpu_extended.py  test_api_health.py  test_api_health_alerts.py  test_api_health_uptime.py  test_api_history.py  test_api_lifecycle.py  test_api_lifetime_stats.py  test_api_llm_lifetime.py  test_api_llm_stats.py  test_api_logs.py  (+471 more)
(+1249 files in other folders)
