[project]
name = "gpu-dashboard"
version = "0.1.0"
description = "Lightweight NVIDIA GPU monitoring + control dashboard for Linux"
authors = [{ name = "Shad107" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["gpu", "nvidia", "dashboard", "monitoring", "linux", "egpu", "oculink"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[project.scripts]
gpu-dashboard = "gpu_dashboard.__main__:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers"
